--- a/index.html
+++ b/index.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sally Lim's Personal Website</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <div class="topnav">
+      <img
+        src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ec/Happy_smiley_face.png/480px-Happy_smiley_face.png"
+        alt="Sally's cartoon photo"
+        width="40"
+        heigh="40"
+      />
+      <a href="https://www.google.com">About</a>
+      <a href="https://www.google.com">Skills</a>
+      <a href="https://www.google.com">Experience</a>
+        <a href="https://www.google.com">Contact</a>
+      <!--make all of these links to locations in site-->
+    </div>
+
+    <h3>Hi I'm</h3>
+    <h1>Sally Lim</h1>
+    <h2>I love to code.</h2>
+    <!--edit above later-->
+    <h3>
+      I am a Software Engineer, and I am in my 2nd year of
+      <strong>Computer Science</strong> at the University of British Columbia in
+      Vancouver, B.C.
+    </h3>
+    <br />
+
+    <h2>What I can do</h2>
+    <!--List of skills... put a short description?-->
+    <h3>...</h3>
+    <br />
+
+    <h2>Project Experience</h2>
+    <table>
+      <!--Put img of project, title of project, description of project and skills used for project-->
+    </table>
+    <br />
+
+    <!--Make this a hyperlink... email..? contact me page?-->
+    <h3>Get in touch</h3>
+  </body>
 </html>
