added div to landing page text and added link to new style.css file

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sally Lim's Personal Website</title>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <div class="topnav">
@@ -16,19 +17,21 @@
       <a href="https://www.google.com">About</a>
       <a href="https://www.google.com">Skills</a>
       <a href="https://www.google.com">Experience</a>
-        <a href="https://www.google.com">Contact</a>
+      <a href="https://www.google.com">Contact</a>
       <!--make all of these links to locations in site-->
     </div>
 
-    <h3>Hi I'm</h3>
-    <h1>Sally Lim</h1>
-    <h2>I love to code.</h2>
-    <!--edit above later-->
-    <h3>
-      I am a Software Engineer, and I am in my 2nd year of
-      <strong>Computer Science</strong> at the University of British Columbia in
-      Vancouver, B.C.
-    </h3>
+    <div class="">
+      <h3>Hi I'm</h3>
+      <h1>Sally Lim</h1>
+      <h2>I love to code.</h2>
+      <!--edit above later-->
+      <h3>
+        I am a Software Engineer, and I am in my 2nd year of
+        <strong>Computer Science</strong> at the University of British Columbia
+        in Vancouver, B.C.
+      </h3>
+    </div>
     <br />
 
     <h2>What I can do</h2>
