--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="topnav">
       <img
-        src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ec/Happy_smiley_face.png/480px-Happy_smiley_face.png"
+        src="C:\Users\Sally Lim\Desktop\Projects\SallyLim.github.io\me.png"
         alt="Sally's cartoon photo"
         width="40"
         heigh="40"
