--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="topnav">
       <img
-        src="C:\Users\Sally Lim\Desktop\Projects\SallyLim.github.io\me.png"
+        src="me.png"
         alt="Sally's cartoon photo"
         width="40"
         heigh="40"
