minimum of header is completed

--- a/index.html
+++ b/index.html
@@ -7,23 +7,36 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div class="topnav">
-      <img
-        src="me.png"
-        alt="Sally's cartoon photo"
-        width="40"
-        heigh="40"
-      />
-      <a href="https://www.google.com">About</a>
+    <div class="header">
+      <!--make all of these links to locations in site-->
+      <a href="https://sallylim.github.io/SallyLim-github.io/">About</a>
       <a href="https://www.google.com">Skills</a>
       <a href="https://www.google.com">Experience</a>
       <a href="https://www.google.com">Contact</a>
-      <!--make all of these links to locations in site-->
+      <div class="header-contact">
+        <a href="https://ca.linkedin.com/">
+          <img
+          src="LI-In-Bug.png"
+          alt="Sally's Linkedin"
+          class="logo">
+        </a>
+        <a href="https://github.com">
+          <img
+          src="GitHub-Mark-64px.png"
+          alt="Sally's GitHub"
+          class="logo">
+        </a>
+      </div>
     </div>
 
     <div class="">
-      <h3>Hi I'm</h3>
-      <h1>Sally Lim</h1>
+      <img
+      src="me.png"
+      alt="Sally's cartoon photo"
+      class="center-wholeline"
+      />
+      <h3>Hi. I'm</h3>
+      <h1>Sally.</h1>
       <h2>I love to code.</h2>
       <!--edit above later-->
       <h3>
