added local linking for home and added new tab function for links

--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
   <body>
     <div class="header">
       <!--make all of these links to locations in site-->
-      <a href="https://sallylim.github.io/SallyLim-github.io/">About</a>
-      <a href="https://www.google.com">Skills</a>
-      <a href="https://www.google.com">Experience</a>
-      <a href="https://www.google.com">Contact</a>
+      <a href="https://sallylim.github.io/SallyLim-github.io/#home"
+      target="_blank">About</a>
+      <a href="https://www.google.com" target="_blank">Skills</a>
+      <a href="https://www.google.com" target="_blank">Experience</a>
+      <a href="https://www.google.com" target="_blank">Contact</a>
       <div class="header-contact">
-        <a href="https://ca.linkedin.com/">
+        <a href="https://ca.linkedin.com/" target="_blank">
           <img
           src="LI-In-Bug.png"
           alt="Sally's Linkedin"
           class="logo">
         </a>
-        <a href="https://github.com">
+        <a href="https://github.com/SallyLim" target="_blank">
           <img
           src="GitHub-Mark-64px.png"
           alt="Sally's GitHub"
@@ -30,7 +31,8 @@
     </div>
 
     <div class="">
-      <img
+      <img 
+      id="home"
       src="me.png"
       alt="Sally's cartoon photo"
       class="center-wholeline"
