--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
   <body>
     <div class="header">
       <!--make all of these links to locations in site-->
-      <a href="https://sallylim.github.io/SallyLim-github.io/#home"
-      target="_blank">About</a>
-      <a href="https://www.google.com" target="_blank">Skills</a>
-      <a href="https://www.google.com" target="_blank">Experience</a>
-      <a href="https://www.google.com" target="_blank">Contact</a>
+      <a href="https://sallylim.github.io/SallyLim-github.io/#about">About</a>
+      <a href="https://sallylim.github.io/SallyLim-github.io/#skills">Skills</a>
+      <a href="https://sallylim.github.io/SallyLim-github.io/#experience">Experience</a>
+      <a href="https://sallylim.github.io/SallyLim-github.io/#contact">Contact</a>
       <div class="header-contact">
         <a href="https://ca.linkedin.com/" target="_blank">
           <img
@@ -30,37 +29,47 @@
       </div>
     </div>
 
-    <div class="">
-      <img 
-      id="home"
-      src="me.png"
-      alt="Sally's cartoon photo"
-      class="center-wholeline"
-      />
-      <h3>Hi. I'm</h3>
-      <h1>Sally.</h1>
-      <h2>I love to code.</h2>
-      <!--edit above later-->
-      <h3>
-        I am a Software Engineer, and I am in my 2nd year of
-        <strong>Computer Science</strong> at the University of British Columbia
-        in Vancouver, B.C.
-      </h3>
-    </div>
+    <section class="resume-section" id="about">
+      <div class="resume-section-content">
+        <img 
+        src="me.png"
+        alt="Sally's cartoon photo"
+        class="center-wholeline"
+        />
+        <div class="landing-page-emphasis">
+          <h3 class="small-words">Hi. I'm</h3>
+          <h1 class="emphasized-words">Sally.</h1>
+        </div>
+        <h2 class="paragraph-words">I love to code.</h2>
+        <!--edit above later-->
+        <h3 class="small-words">
+          I am a Software Engineer, and I am in my 2nd year of
+          <strong>Computer Science</strong> at the University of British Columbia
+          in Vancouver, B.C.
+        </h3>
+      </div>
+    </section>
     <br />
 
-    <h2>What I can do</h2>
-    <!--List of skills... put a short description?-->
-    <h3>...</h3>
+    <section class="resume-section" id="skills">
+      <h2>What I can do</h2>
+      <!--List of skills... put a short description?-->
+      <h3>...</h3>
+    </section>
     <br />
 
-    <h2>Project Experience</h2>
-    <table>
-      <!--Put img of project, title of project, description of project and skills used for project-->
-    </table>
+    <section class="resume-section" id="experience">
+      <h2>Project Experience</h2>
+      <table>
+        <!--Put img of project, title of project, description of project and skills used for project-->
+      </table>
+    </section>
     <br />
 
-    <!--Make this a hyperlink... email..? contact me page?-->
-    <h3>Get in touch</h3>
+    <section class="resume-section" id="contact">
+      <!--Make this a hyperlink... email..? contact me page?-->
+      <h3>Get in touch</h3>
+      <!--add a link to my resume-->
+    </section>
   </body>
 </html>
