mock landing page is good but need to fix header spacing

--- a/index.html
+++ b/index.html
@@ -5,16 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sally Lim's Personal Website</title>
     <link rel="stylesheet" href="css/styles.css" />
-  </head>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Bad Script|Flamenco'>  </head>
   <body>
     <div class="header">
-      <!--make all of these links to locations in site-->
+      <a href="https://sallylim.github.io/SallyLim-github.io/#home">
+        <img
+        src="me.png"
+        alt="Sally's cartoon photo"
+        class="home-logo">
+      </a>
       <a href="https://sallylim.github.io/SallyLim-github.io/#about">About</a>
       <a href="https://sallylim.github.io/SallyLim-github.io/#skills">Skills</a>
       <a href="https://sallylim.github.io/SallyLim-github.io/#experience">Experience</a>
       <a href="https://sallylim.github.io/SallyLim-github.io/#contact">Contact</a>
       <div class="header-contact">
-        <a href="https://ca.linkedin.com/" target="_blank">
+        <a href="https://www.linkedin.com/in/sally-lim-5201821b7/" target="_blank">
           <img
           src="LI-In-Bug.png"
           alt="Sally's Linkedin"
@@ -29,20 +34,26 @@
       </div>
     </div>
 
-    <section class="resume-section" id="about">
-      <div class="resume-section-content">
+    <section class="resume-section" id="home">
+      <div class="landing-page">
         <img 
         src="me.png"
         alt="Sally's cartoon photo"
-        class="center-wholeline"
+        class="pic"
         />
         <div class="landing-page-emphasis">
-          <h3 class="small-words">Hi. I'm</h3>
-          <h1 class="emphasized-words">Sally.</h1>
+          <h3 class="hi">Hi.  </h3>
+          <h3 class="im">  I'm  </h3>
+          <h1 class="emphasized-words">Sally</h1>
         </div>
-        <h2 class="paragraph-words">I love to code.</h2>
-        <!--edit above later-->
-        <h3 class="small-words">
+        <h2 class="i-love-to-code">I love to code.</h2>
+      </div>
+    </section>
+    <br />
+
+    <section class="resume-section" id="about">
+      <div class="resume-section-content">
+        <h3 class="body-words">
           I am a Software Engineer, and I am in my 2nd year of
           <strong>Computer Science</strong> at the University of British Columbia
           in Vancouver, B.C.
