mock about me page complete. require styling

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sally Lim's Personal Website</title>
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Bad Script|Flamenco'>  </head>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Bad Script|Flamenco|Raleway'>  </head>
   <body>
     <div class="header">
       <a href="https://sallylim.github.io/SallyLim-github.io/#home">
@@ -15,7 +15,6 @@
         class="home-logo">
       </a>
       <a href="https://sallylim.github.io/SallyLim-github.io/#about">About</a>
-      <a href="https://sallylim.github.io/SallyLim-github.io/#skills">Skills</a>
       <a href="https://sallylim.github.io/SallyLim-github.io/#experience">Experience</a>
       <a href="https://sallylim.github.io/SallyLim-github.io/#contact">Contact</a>
       <div class="header-contact">
@@ -52,20 +51,48 @@
     <br />
 
     <section class="resume-section" id="about">
-      <div class="resume-section-content">
+      <div class="about-me">
+        <h1 class="subject">
+          About me
+        </h1>
         <h3 class="body-words">
           I am a Software Engineer, and I am in my 2nd year of
           <strong>Computer Science</strong> at the University of British Columbia
           in Vancouver, B.C.
         </h3>
+        <h2 class="subheading">
+          Languages and Tools I've worked with:
+        </h2>
+        <table class="table-skills">
+          <th>
+            <table class='inside-table'>
+              <tr><th>Java</th> <th>&#9733 &#9733 &#9733 &#9733 &#9734</th></tr> 
+              <tr><th>C++</th> <th>&#9733 &#9733 &#9733 &#9733 &#9734</th></tr>
+              <tr><th>C</th> <th>&#9733 &#9733 &#9733 &#9733 &#9734</th></tr>
+              <tr><th>Python</th> <th>&#9733 &#9733 &#9733 &#9733 &#9734</tr></tr>
+              <tr><th>R</th> <th>&#9733 &#9733 &#9733 &#9733 &#9733</th></tr>
+            </table>
+          </th>
+          <th>
+            <table class='inside-table'>
+              <tr><th>Procreate</th> <th>&#9733 &#9733 &#9733 &#9733 &#9734</th></tr>
+              <tr><th>HTML</th> <th>&#9733 &#9733 &#9733 &#9733 &#9734</th></tr>
+              <tr><th>CSS</th> <th>&#9733 &#9733 &#9733 &#9733 &#9734</th></tr>
+              <tr><th>React</th> <th>&#9733 &#9733 &#9734 &#9734 &#9734</th></tr>
+              <tr><th>Dart</th> <th>&#9733 &#9733 &#9734 &#9734 &#9734</th></tr>
+            </table>
+          </th>
+          <th>
+            <table class='inside-table'>
+              <tr><th>Git & GitHub</th> <th>&#9733 &#9733 &#9733 &#9733 &#9734</th></tr>
+              <tr><th>Figma <th>&#9733 &#9733 &#9733 &#9733 &#9734</th></tr>
+              <tr><th>Numpy <th>&#9733 &#9733 &#9733 &#9734 &#9734</th></tr>
+              <tr><th>Panda <th>&#9733 &#9733 &#9733 &#9734 &#9734</th></tr>
+              <tr><th>Blender <th>&#9733 &#9733 &#9734 &#9734 &#9734</th></tr>
+            </table>
+          </th>
+        </table>
       </div>
-    </section>
-    <br />
-
-    <section class="resume-section" id="skills">
-      <h2>What I can do</h2>
-      <!--List of skills... put a short description?-->
-      <h3>...</h3>
     </section>
     <br />
 
