finished styling about me section and added one project to experience section

--- a/index.html
+++ b/index.html
@@ -57,49 +57,70 @@
         </h1>
         <h3 class="body-words">
           I am a Software Engineer, and I am in my 2nd year of
-          <strong>Computer Science</strong> at the University of British Columbia
+          Computer Science at the University of British Columbia
           in Vancouver, B.C.
+        </h3>
+        <h3 class="body-words">
+          I love learning, and I have been improving my coding
+          skills and design skills daily.
         </h3>
         <h2 class="subheading">
           Languages and Tools I've worked with:
         </h2>
         <table class="table-skills">
-          <th>
-            <table class='inside-table'>
-              <tr><th>Java</th> <th>&#9733 &#9733 &#9733 &#9733 &#9734</th></tr> 
-              <tr><th>C++</th> <th>&#9733 &#9733 &#9733 &#9733 &#9734</th></tr>
-              <tr><th>C</th> <th>&#9733 &#9733 &#9733 &#9733 &#9734</th></tr>
-              <tr><th>Python</th> <th>&#9733 &#9733 &#9733 &#9733 &#9734</tr></tr>
-              <tr><th>R</th> <th>&#9733 &#9733 &#9733 &#9733 &#9733</th></tr>
-            </table>
-          </th>
-          <th>
-            <table class='inside-table'>
-              <tr><th>Procreate</th> <th>&#9733 &#9733 &#9733 &#9733 &#9734</th></tr>
-              <tr><th>HTML</th> <th>&#9733 &#9733 &#9733 &#9733 &#9734</th></tr>
-              <tr><th>CSS</th> <th>&#9733 &#9733 &#9733 &#9733 &#9734</th></tr>
-              <tr><th>React</th> <th>&#9733 &#9733 &#9734 &#9734 &#9734</th></tr>
-              <tr><th>Dart</th> <th>&#9733 &#9733 &#9734 &#9734 &#9734</th></tr>
-            </table>
-          </th>
-          <th>
-            <table class='inside-table'>
-              <tr><th>Git & GitHub</th> <th>&#9733 &#9733 &#9733 &#9733 &#9734</th></tr>
-              <tr><th>Figma <th>&#9733 &#9733 &#9733 &#9733 &#9734</th></tr>
-              <tr><th>Numpy <th>&#9733 &#9733 &#9733 &#9734 &#9734</th></tr>
-              <tr><th>Panda <th>&#9733 &#9733 &#9733 &#9734 &#9734</th></tr>
-              <tr><th>Blender <th>&#9733 &#9733 &#9734 &#9734 &#9734</th></tr>
-            </table>
-          </th>
+          <tr>
+            <td>Java</td> <td class="star">&#9733 &#9733 &#9733 &#9733 &#9734</td>
+            <td>Procreate</td> <td class="star">&#9733 &#9733 &#9733 &#9733 &#9734</td>
+            <td>Git & GitHub</td> <td class="star">&#9733 &#9733 &#9733 &#9733 &#9734</td>
+          </tr>
+          <tr>
+            <td>C++</td> <td class="star">&#9733 &#9733 &#9733 &#9733 &#9734</td>
+            <td>HTML</td> <td class="star">&#9733 &#9733 &#9733 &#9733 &#9734</td>
+            <td>Figma</td> <td class="star">&#9733 &#9733 &#9733 &#9733 &#9734</td>
+          </tr>
+          <tr>
+            <td>C</td> <td class="star">&#9733 &#9733 &#9733 &#9733 &#9734</td>
+            <td>CSS</td> <td class="star">&#9733 &#9733 &#9733 &#9733 &#9734</td>
+            <td>Numpy</td> <td class="star">&#9733 &#9733 &#9733 &#9734 &#9734</td>
+          </tr>
+          <tr>
+            <td>Python</td> <td class="star">&#9733 &#9733 &#9733 &#9733 &#9734</td>
+            <td>React</td> <td class="star">&#9733 &#9733 &#9734 &#9734 &#9734</td>
+            <td>Panda</td> <td class="star">&#9733 &#9733 &#9733 &#9734 &#9734</td>
+          </tr>
+          <tr>
+            <td>R</td> <td class="star">&#9733 &#9733 &#9733 &#9733 &#9733</td>
+            <td>Dart</td> <td class="star">&#9733 &#9733 &#9734 &#9734 &#9734</td>
+            <td>Blender</td> <td class="star">&#9733 &#9733 &#9734 &#9734 &#9734</td>
+          </tr>
         </table>
       </div>
     </section>
     <br />
 
     <section class="resume-section" id="experience">
-      <h2>Project Experience</h2>
-      <table>
-        <!--Put img of project, title of project, description of project and skills used for project-->
+      <h1 class="subject">Project Experience</h1>
+      <table class="project-table">
+        <tr>
+          <td class="project-showcase">
+            <img 
+            src="recipe companion website.PNG"
+            alt="Recipe Companion Website"
+            class="project-img"
+            />
+          </td>
+          <td>
+            <h2 class="project-title">Recipe Companion Website</h2>
+            <h2 class="language">React</h2>
+            <h3 class="project-description">
+              <li>Makes cooking accessible by allowing users to cook new food with ingredients already in their pantry.</li>
+              <li>Built and designed the front-end of the website for NwHacks 2021.</li>
+              <li>The website takes in a URL and shows the substitution ingredients for the given recipe.</li>
+            </h3>
+            <a href="https://sallylim.github.io/SallyLim-github.io/#experience">Learn More</a>
+            <a href="http://cooking.vincentsastra.ca/">Demo</a>
+          </td>
+        </tr>
       </table>
     </section>
     <br />
