finished projects section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sally Lim's Personal Website</title>
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Bad Script|Flamenco|Raleway'>  </head>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Bad Script|Flamenco|Raleway:wght@100&display=swap'>  </head>
   <body>
     <div class="header">
       <a href="https://sallylim.github.io/SallyLim-github.io/#home">
@@ -15,6 +15,7 @@
         class="home-logo">
       </a>
       <a href="https://sallylim.github.io/SallyLim-github.io/#about">About</a>
+      <a href="https://sallylim.github.io/SallyLim-github.io/#projects">Projects</a>
       <a href="https://sallylim.github.io/SallyLim-github.io/#experience">Experience</a>
       <a href="https://sallylim.github.io/SallyLim-github.io/#contact">Contact</a>
       <div class="header-contact">
@@ -98,8 +99,8 @@
     </section>
     <br />
 
-    <section class="resume-section" id="experience">
-      <h1 class="subject">Project Experience</h1>
+    <section class="resume-section" id="projects">
+      <h1 class="subject">Projects</h1>
       <table class="project-table">
         <tr>
           <td class="project-showcase">
@@ -117,13 +118,157 @@
               <li>Built and designed the front-end of the website for NwHacks 2021.</li>
               <li>The website takes in a URL and shows the substitution ingredients for the given recipe.</li>
             </h3>
-            <a href="https://sallylim.github.io/SallyLim-github.io/#experience">Learn More</a>
-            <a href="http://cooking.vincentsastra.ca/">Demo</a>
+            <div class='project-links'>
+              <a class='demo-link' href="http://cooking.vincentsastra.ca/">Demo</a>
+              <a href="https://github.com/SallyLim/Recipe-Companion" target="_blank">
+                <img
+                src="GitHub-Mark-64px.png"
+                alt="GitHub Repository"
+                class="logo">
+              </a>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td class="project-showcase">
+            <img 
+            src="susmerchwebsite.png"
+            alt="SUS merch website"
+            class="project-img"
+            />
+          </td>
+          <td>
+            <h2 class="project-title">UBC Science Undergraduate Society Merchandise Website</h2>
+            <h2 class="language">Squarespace</h2>
+            <h3 class="project-description">
+              <li>Designed a shopping website for UBC Science Undergraduate Society merchandise with Squarespace.</li>
+              <li>Set up all shopping website functions like shipping, payment, or privacy agreements.</li>
+            </h3>
+            <div class='project-links'>
+              <a class='demo-link' href="https://www.ubcsussales.com/">Demo</a>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td class="project-showcase">
+            <img 
+            src="personalwebsite.png"
+            alt="Personal Website"
+            class="project-img"
+            />
+          </td>
+          <td>
+            <h2 class="project-title">Personal Website</h2>
+            <h2 class="language">HTML, CSS</h2>
+            <h3 class="project-description">
+              <li>Created a personal website from scratch using HTML and CSS.</li>
+              <li>I wanted to showcase who I am and my work more effectively.</li>
+            </h3>
+            <div class='project-links'>
+              <a class='demo-link' href="https://sallylim.github.io/SallyLim-github.io/">Demo</a>
+              <a href="https://github.com/SallyLim/SallyLim-github.io" target="_blank">
+                <img
+                src="GitHub-Mark-64px.png"
+                alt="GitHub Repository"
+                class="logo">
+              </a>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td class="project-showcase">
+            <img 
+            src="ARshirttryonapp.jpeg"
+            alt="AR Virtual Wardrobe"
+            class="project-img-tall"
+            />
+          </td>
+          <td>
+            <h2 class="project-title">AR Virtual Wardrobe</h2>
+            <h2 class="language">Blender, ARKit, Unity</h2>
+            <h3 class="project-description">
+              <li>I worked together to create a solution for the retail industry.</li>
+              <li>I implemented an ios application to allow customers to try on shirts before purchasing for DubHacks 2020.</li>
+              <li>Designed the user-interface with Unity, and made two 3-D shirts on top of a rigged model.</li>
+            </h3>
+            <div class='project-links'>
+              <a class='demo-link' href="https://devpost.com/software/ar-shirt-try-on">Learn More</a>
+              <a href="https://github.com/VincentSastra/DubHacks-Virtual-Wardrobe" target="_blank">
+                <img
+                src="GitHub-Mark-64px.png"
+                alt="GitHub Repository"
+                class="logo">
+              </a>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td class="project-showcase">
+            <img 
+            src="planme.png"
+            alt="PlanMe"
+            class="project-img-tall"
+            />
+            <img 
+            src="planme2.png"
+            alt="PlanMe"
+            class="project-img-tall"
+            />
+          </td>
+          <td>
+            <h2 class="project-title">
+              <img 
+              src="planmelogo.png"
+              alt="PlanMe logo"
+              class="logo-large"
+              />
+              PlanMe
+            </h2>
+            <h2 class="language">Figma</h2>
+            <h3 class="project-description">
+              <li>I worked together to create a solution for the remote learning by helping students be organized.</li>
+              <li>Created a prototype of an ios application using Figma for McGill Bolt Hackathon 2020.</li>
+              <li>Designed an appealing and engaging user-interface.</li>
+            </h3>
+            <div class='project-links'>
+              <a class='demo-link' href="https://www.figma.com/proto/E7Gkz5Mmt4dADahYZycXwL/App?node-id=7%3A77&scaling=scale-down">Demo</a>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td class="project-showcase">
+            <img 
+            src="htmlcreator.PNG"
+            alt="HTML Creator"
+            class="project-img"
+            />
+          </td>
+          <td>
+            <h2 class="project-title">HTML Creator</h2>
+            <h2 class="language">Java, HTML</h2>
+            <h3 class="project-description">
+              <li>Developed a no-code desktop application using Java that generates an HTML web page.</li>
+            </h3>
+            <div class='project-links'>
+              <a href="https://github.com/SallyLim/HTMLCreator" target="_blank">
+                <img
+                src="GitHub-Mark-64px.png"
+                alt="GitHub Repository"
+                class="logo">
+              </a>
+            </div>
           </td>
         </tr>
       </table>
     </section>
     <br />
+
+    <section class="resume-section" id="experience">
+      <!--Make this a hyperlink... email..? contact me page?-->
+      <h1 class="subject">Work and Extracurricular Experience</h1>
+      
+    </section>
+    <br/>
 
     <section class="resume-section" id="contact">
       <!--Make this a hyperlink... email..? contact me page?-->
