deployment for projects and basic contact section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
       </a>
       <a href="https://sallylim.github.io/SallyLim-github.io/#about">About</a>
       <a href="https://sallylim.github.io/SallyLim-github.io/#projects">Projects</a>
-      <a href="https://sallylim.github.io/SallyLim-github.io/#experience">Experience</a>
       <a href="https://sallylim.github.io/SallyLim-github.io/#contact">Contact</a>
       <div class="header-contact">
         <a href="https://www.linkedin.com/in/sally-lim-5201821b7/" target="_blank">
@@ -263,17 +262,18 @@
     </section>
     <br />
 
-    <section class="resume-section" id="experience">
-      <!--Make this a hyperlink... email..? contact me page?-->
-      <h1 class="subject">Work and Extracurricular Experience</h1>
-      
-    </section>
-    <br/>
-
     <section class="resume-section" id="contact">
       <!--Make this a hyperlink... email..? contact me page?-->
-      <h3>Get in touch</h3>
-      <!--add a link to my resume-->
+      <h1 class="subject">Get in touch</h1>
+      <h3 class="body-words">
+        I am currently looking for opportunities in UI, Front-end development, Software development, Product Managment or Machine Learning.
+        However, I am open to other opportunities as well.
+      </h3>
+      <br/>
+      <h3 class="body-words">
+        Please send me an email! I would love to connect with you even if it's just to say hello.
+      </h3>
+      <h3 class="email">Email: lim.sally20@gmail.com</h3>
     </section>
   </body>
 </html>
