--- a/index.html
+++ b/index.html
@@ -272,8 +272,26 @@
 
     <section class="resume-section" id="contact">
       <!--Make this a hyperlink... email..? contact me page?-->
-      <h3>Get in touch</h3>
-      <!--add a link to my resume-->
+      <h1 class="subject">Get in touch</h1>
+      <h3 class="body-words">
+        I am currently looking for opportunities in UI, Front-end development, Software development, Product Managment or Machine Learning.
+        However, I am open to other opportunities as well.
+      </h3>
+      <br/>
+      <h3 class="body-words">
+        Please send me an email by filling out the form below! I would love to connect with you even if it's just to say hello.
+      </h3>
+      <div class="contact-me">
+        <form name="contact-form" action=”mailto:lim.sally20@gmail.com” method=”POST” enctype=”text/plain”>
+          Name:<br>
+          <input type=”text” size=”20″ placeholder="Your name..."><br>
+          Message:<br>
+          <textarea type="text" rows=”6″ cols=”20″ placeholder="Your message..."></textarea><br><br>
+          <input type="submit" value="Send">
+        </form>
+      </div>
+
+      
     </section>
   </body>
 </html>
