edited skills section:

--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
           <tr>
             <td>C</td> <td class="star">&#9733 &#9733 &#9733 &#9733 &#9734</td>
             <td>CSS</td> <td class="star">&#9733 &#9733 &#9733 &#9733 &#9734</td>
-            <td>Numpy</td> <td class="star">&#9733 &#9733 &#9733 &#9734 &#9734</td>
+            <td>Scikit-learn</td> <td class="star">&#9733 &#9733 &#9733 &#9734 &#9734</td>
           </tr>
           <tr>
             <td>Python</td> <td class="star">&#9733 &#9733 &#9733 &#9733 &#9734</td>
             <td>React</td> <td class="star">&#9733 &#9733 &#9734 &#9734 &#9734</td>
-            <td>Panda</td> <td class="star">&#9733 &#9733 &#9733 &#9734 &#9734</td>
+            <td>Numpy & Panda</td> <td class="star">&#9733 &#9733 &#9733 &#9734 &#9734</td>
           </tr>
           <tr>
             <td>R</td> <td class="star">&#9733 &#9733 &#9733 &#9733 &#9733</td>
