added designs section

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       </a>
       <a href="https://sallylim.github.io/SallyLim-github.io/#about">About</a>
       <a href="https://sallylim.github.io/SallyLim-github.io/#projects">Projects</a>
+      <a href="https://sallylim.github.io/SallyLim-github.io/#designs">Designs</a>
       <a href="https://sallylim.github.io/SallyLim-github.io/#contact">Contact</a>
       <div class="header-contact">
         <a href="https://www.linkedin.com/in/sally-lim-5201821b7/" target="_blank">
@@ -261,6 +262,71 @@
       </table>
     </section>
     <br />
+
+    <section class="resume-section" id="designs">
+      <h1 class="subject">My Designs</h1>
+      <div class="grid-container">
+        <figure class="grid-item">
+          <img
+          src="portrait.png"
+          alt="My Portrait"
+          class="design">
+          <figcaption class="design-description">Portrait digital art</figcaption>
+        </figure>
+        <figure class="grid-item">
+          <img
+            src="me.png"
+            alt="Me"
+            class="design">
+          <figcaption class="design-description">Cartoon portrait</figcaption>
+        </figure>
+        <figure class="grid-item">
+          <img
+            src="cat.png"
+            alt="Cat"
+            class="design">
+          <figcaption class="design-description">Cat digital art</figcaption>
+        </figure>
+        <figure class="grid-item">
+          <img
+            src="char.png"
+            alt="Character design"
+            class="design">
+          <figcaption class="design-description">Cartoon portrait</figcaption>
+        </figure>
+        <figure class="grid-item">
+          <img
+            src="cat-game-char.png"
+            alt="Cat game character"
+            class="design">
+          <figcaption class="design-description">Cat 2-D game character</figcaption>
+        </figure>
+        <figure class="grid-item">
+          <img
+            src="stickers.png"
+            alt="Sticker design"
+            class="design">
+          <figcaption class="design-description">Computer Science Sticker set</figcaption>
+        </figure>
+        <figure class="grid-item">
+          <img
+            src="wis.png"
+            alt="Women in Science Shirt Design"
+            class="design">
+          <figcaption class="design-description">Women in Science crewneck design. Purchase at 
+            <a href="https://www.ubcsussales.com" target="_blank">ubcsussales.com</a>
+          </figcaption>
+        </figure>
+        <figure class="grid-item">
+          <img
+            src="planmelogo.png"
+            alt="Plan me logo"
+            class="design">
+          <figcaption class="design-description">Plan Me logo</figcaption>
+        </figure>
+      </div>
+    </section>
+    <br/>
 
     <section class="resume-section" id="contact">
       <!--Make this a hyperlink... email..? contact me page?-->
