cleaned up project directory

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="header">
       <a href="https://sallylim.github.io/SallyLim-github.io/#home">
         <img
-        src="me.png"
+        src="images/me.png"
         alt="Sally's cartoon photo"
         class="home-logo">
       </a>
@@ -21,13 +21,13 @@
       <div class="header-contact">
         <a href="https://www.linkedin.com/in/sally-lim-5201821b7/" target="_blank">
           <img
-          src="LI-In-Bug.png"
+          src="images/LI-In-Bug.png"
           alt="Sally's Linkedin"
           class="logo">
         </a>
         <a href="https://github.com/SallyLim" target="_blank">
           <img
-          src="GitHub-Mark-64px.png"
+          src="images/GitHub-Mark-64px.png"
           alt="Sally's GitHub"
           class="logo">
         </a>
@@ -37,7 +37,7 @@
     <section class="resume-section" id="home">
       <div class="landing-page">
         <img 
-        src="me.png"
+        src="images/me.png"
         alt="Sally's cartoon photo"
         class="pic"
         />
@@ -105,7 +105,7 @@
         <tr>
           <td class="project-showcase">
             <img 
-            src="recipe companion website.PNG"
+            src="images/recipe companion website.PNG"
             alt="Recipe Companion Website"
             class="project-img"
             />
@@ -122,7 +122,7 @@
               <a class='demo-link' href="http://cooking.vincentsastra.ca/">Demo</a>
               <a href="https://github.com/SallyLim/Recipe-Companion" target="_blank">
                 <img
-                src="GitHub-Mark-64px.png"
+                src="images/GitHub-Mark-64px.png"
                 alt="GitHub Repository"
                 class="logo">
               </a>
@@ -132,7 +132,7 @@
         <tr>
           <td class="project-showcase">
             <img 
-            src="susmerchwebsite.png"
+            src="images/susmerchwebsite.png"
             alt="SUS merch website"
             class="project-img"
             />
@@ -152,7 +152,7 @@
         <tr>
           <td class="project-showcase">
             <img 
-            src="personalwebsite.png"
+            src="images/personalwebsite.png"
             alt="Personal Website"
             class="project-img"
             />
@@ -168,7 +168,7 @@
               <a class='demo-link' href="https://sallylim.github.io/SallyLim-github.io/">Demo</a>
               <a href="https://github.com/SallyLim/SallyLim-github.io" target="_blank">
                 <img
-                src="GitHub-Mark-64px.png"
+                src="images/GitHub-Mark-64px.png"
                 alt="GitHub Repository"
                 class="logo">
               </a>
@@ -178,7 +178,7 @@
         <tr>
           <td class="project-showcase">
             <img 
-            src="ARshirttryonapp.jpeg"
+            src="images/ARshirttryonapp.jpeg"
             alt="AR Virtual Wardrobe"
             class="project-img-tall"
             />
@@ -195,7 +195,7 @@
               <a class='demo-link' href="https://devpost.com/software/ar-shirt-try-on">Learn More</a>
               <a href="https://github.com/VincentSastra/DubHacks-Virtual-Wardrobe" target="_blank">
                 <img
-                src="GitHub-Mark-64px.png"
+                src="images/GitHub-Mark-64px.png"
                 alt="GitHub Repository"
                 class="logo">
               </a>
@@ -205,12 +205,12 @@
         <tr>
           <td class="project-showcase">
             <img 
-            src="planme.png"
+            src="images/planme.png"
             alt="PlanMe"
             class="project-img-tall"
             />
             <img 
-            src="planme2.png"
+            src="images/planme2.png"
             alt="PlanMe"
             class="project-img-tall"
             />
@@ -218,7 +218,7 @@
           <td>
             <h2 class="project-title">
               <img 
-              src="planmelogo.png"
+              src="images/planmelogo.png"
               alt="PlanMe logo"
               class="logo-large"
               />
@@ -238,7 +238,7 @@
         <tr>
           <td class="project-showcase">
             <img 
-            src="htmlcreator.PNG"
+            src="images/htmlcreator.PNG"
             alt="HTML Creator"
             class="project-img"
             />
@@ -252,7 +252,7 @@
             <div class='project-links'>
               <a href="https://github.com/SallyLim/HTMLCreator" target="_blank">
                 <img
-                src="GitHub-Mark-64px.png"
+                src="images/GitHub-Mark-64px.png"
                 alt="GitHub Repository"
                 class="logo">
               </a>
@@ -268,49 +268,49 @@
       <div class="grid-container">
         <figure class="grid-item">
           <img
-          src="portrait.png"
+          src="images/portrait.png"
           alt="My Portrait"
           class="design">
           <figcaption class="design-description">Portrait digital art</figcaption>
         </figure>
         <figure class="grid-item">
           <img
-            src="me.png"
+            src="images/me.png"
             alt="Me"
             class="design">
           <figcaption class="design-description">Cartoon portrait</figcaption>
         </figure>
         <figure class="grid-item">
           <img
-            src="cat.png"
+            src="images/cat.png"
             alt="Cat"
             class="design">
           <figcaption class="design-description">Cat digital art</figcaption>
         </figure>
         <figure class="grid-item">
           <img
-            src="char.png"
+            src="images/char.png"
             alt="Character design"
             class="design">
           <figcaption class="design-description">Cartoon portrait</figcaption>
         </figure>
         <figure class="grid-item">
           <img
-            src="cat-game-char.png"
+            src="images/cat-game-char.png"
             alt="Cat game character"
             class="design">
           <figcaption class="design-description">Cat 2-D game character</figcaption>
         </figure>
         <figure class="grid-item">
           <img
-            src="stickers.png"
+            src="images/stickers.png"
             alt="Sticker design"
             class="design">
           <figcaption class="design-description">Computer Science Sticker set</figcaption>
         </figure>
         <figure class="grid-item">
           <img
-            src="wis.png"
+            src="images/wis.png"
             alt="Women in Science Shirt Design"
             class="design">
           <figcaption class="design-description">Women in Science crewneck design. Purchase at 
@@ -319,7 +319,7 @@
         </figure>
         <figure class="grid-item">
           <img
-            src="planmelogo.png"
+            src="images/planmelogo.png"
             alt="Plan me logo"
             class="design">
           <figcaption class="design-description">Plan Me logo</figcaption>
