--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
       <!--Make this a hyperlink... email..? contact me page?-->
       <h1 class="subject">Get in touch</h1>
       <h3 class="body-words">
-        I am currently looking for opportunities in UX, Front-end development, Software development, Product Managment or Machine Learning.
+        I am currently looking for opportunities in UX design, Front-end development, Full-stack development, Software engineering, or Machine Learning.
         However, I am open to other opportunities as well.
       </h3>
       <br/>
