fixed header for responsiveness. Added jquery and changed css. Fixed minor bugs with moving around on page.

--- a/index.html
+++ b/index.html
@@ -6,18 +6,20 @@
     <title>Sally Lim's Personal Website</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Bad Script|Flamenco|Raleway:wght@100&display=swap'>  </head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="js/script.js"></script>
   <body>
     <div class="header">
-      <a href="https://sallylim.github.io/SallyLim-github.io/#home">
+      <a href="https://sallylim.github.io/#home">
         <img
         src="images/me.png"
         alt="Sally's cartoon photo"
         class="home-logo">
       </a>
-      <a href="https://sallylim.github.io/SallyLim-github.io/#about">About</a>
-      <a href="https://sallylim.github.io/SallyLim-github.io/#projects">Projects</a>
-      <a href="https://sallylim.github.io/SallyLim-github.io/#designs">Designs</a>
-      <a href="https://sallylim.github.io/SallyLim-github.io/#contact">Contact</a>
+      <a href="https://sallylim.github.io/#about">About</a>
+      <a href="https://sallylim.github.io/#projects">Projects</a>
+      <a href="https://sallylim.github.io/#designs">Designs</a>
+      <a href="https://sallylim.github.io/#contact">Contact</a>
       <div class="header-contact">
         <a href="https://www.linkedin.com/in/sally-lim-5201821b7/" target="_blank">
           <img
@@ -32,6 +34,39 @@
           class="logo">
         </a>
       </div>
+    </div>
+
+    <!-- I tried to write the above content in different syntax -->
+    <div class="header_small">
+      <a href="https://sallylim.github.io/#home">
+        <img
+        src="images/me.png"
+        alt="Sally's cartoon photo"
+        class="home-logo">
+      </a>
+      <div id="menu-toggler"><img src="images/Hamburger_icon.svg" alt="Menu"></div>
+      <ul class="mobile-menu">
+        <li><a href="https://sallylim.github.io/#about">About</a></li>
+        <li><a href="https://sallylim.github.io/#projects">Projects</a></li>
+        <li><a href="https://sallylim.github.io/#designs">Designs</a></li>
+        <li><a href="https://sallylim.github.io/#contact">Contact</a></li>
+        <li>
+          <a href="https://www.linkedin.com/in/sally-lim-5201821b7/" target="_blank">
+            <img
+            src="images/LI-In-Bug.png"
+            alt="Sally's Linkedin"
+            class="mobile_logo">LinkedIn
+          </a>
+        </li>
+        <li>
+          <a href="https://github.com/SallyLim" target="_blank">
+            <img
+            src="images/GitHub-Mark-64px.png"
+            alt="Sally's GitHub"
+            class="mobile_logo">GitHub
+          </a>
+        </li>
+      </ul>
     </div>
 
     <section class="resume-section" id="home">
@@ -165,8 +200,8 @@
               <li>I wanted to showcase who I am and my work more effectively.</li>
             </h3>
             <div class='project-links'>
-              <a class='demo-link' href="https://sallylim.github.io/SallyLim-github.io/">Demo</a>
-              <a href="https://github.com/SallyLim/SallyLim-github.io" target="_blank">
+              <a class='demo-link' href="https://sallylim.github.io/">Demo</a>
+              <a href="https://github.com/SallyLim/" target="_blank">
                 <img
                 src="images/GitHub-Mark-64px.png"
                 alt="GitHub Repository"
